[BI-1195] Checking that list parameters have values before executing a BrAPI search request
Returning an empty list if list parameters are empty